--- a/requirements.txt
+++ b/requirements.txt
@@ -1,107 +1,405 @@
+absl-py==1.3.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.8.1
+altair==4.2.0
+amqp==5.1.1
 anyio==3.6.2
+apache-airflow==2.5.0
+apache-airflow-providers-celery==3.1.0
+apache-airflow-providers-common-sql==1.3.1
+apache-airflow-providers-ftp==3.2.0
+apache-airflow-providers-http==4.1.0
+apache-airflow-providers-imap==3.1.0
+apache-airflow-providers-sqlite==3.3.1
+apispec==3.3.2
+argcomplete==2.0.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-attrs==23.1.0
+astroid==2.11.7
+asttokens==2.0.8
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==22.1.0
+autopep8==1.6.0
+Babel==2.11.0
 backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-certifi==2023.5.7
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+billiard==3.6.4.0
+black==22.12.0
+bleach==5.0.1
+blinker==1.5
+blis==0.7.9
+bokeh==2.4.3
+Boruta==0.3
+branca==0.5.0
+cachelib==0.9.0
+cachetools==5.2.0
+catalogue==2.0.8
+category-encoders==2.6.0
+cattrs==22.2.0
+celery==5.2.7
+certifi==2022.9.24
 cffi==1.15.1
-charset-normalizer==3.1.0
+chardet==5.1.0
+charset-normalizer==2.1.1
 click==8.1.3
-comm==0.1.3
-contourpy==1.0.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+clickclick==20.10.2
+cligj==0.7.2
+cloudpickle==2.2.0
+colorama==0.4.6
+colorlog==4.8.0
+commonmark==0.9.1
+confection==0.0.4
+ConfigUpdater==3.1.1
+connexion==2.14.1
+cron-descriptor==1.2.32
+croniter==1.3.8
+cryptography==36.0.2
 cycler==0.11.0
-debugpy==1.6.7
+cymem==2.0.7
+Cython==0.29.32
+dash==2.7.1
+dash-bootstrap-components==1.3.0
+dash-bootstrap-templates==1.0.8
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dask==2022.7.1
+databricks-cli==0.17.5
+dataprep==0.4.5
+db-dtypes==1.0.4
+deap==1.3.3
+debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
-executing==1.2.0
-fastapi==0.95.1
-fastjsonschema==2.16.3
-fonttools==4.39.3
-fqdn==1.5.1
+Deprecated==1.2.13
+dill==0.3.1.1
+dnspython==2.2.1
+docker==6.0.1
+docutils==0.19
+email-validator==1.3.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+entrypoints==0.4
+etils==0.8.0
+exceptiongroup==1.0.4
+executing==0.8.3
+fastjsonschema==2.16.2
+Fiona==1.9.1
+fire==0.5.0
+flake8==4.0.1
+Flask==2.2.2
+Flask-AppBuilder==4.1.4
+Flask-Babel==2.0.0
+Flask-Caching==2.0.1
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.4
+Flask-Login==0.6.2
+Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+flatbuffers==22.9.24
+flower==1.2.0
+folium==0.12.1.post1
+fontawesomefree==6.3.0
+fonttools==4.38.0
+fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.5.0/fr_core_news_sm-3.5.0-py3-none-any.whl
+FrenchLefffLemmatizer @ git+https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git@bc0ebd0135a6cc78f48ddf184069b4c0b9c017d8
+frozenlist==1.3.3
+fsspec==2022.10.0
+gast==0.4.0
+gensim==4.2.0
+geopandas==0.12.2
+gitdb==4.0.9
+GitPython==3.1.29
+google-api-core==2.10.2
+google-auth==2.13.0
+google-auth-oauthlib==0.4.6
+google-cloud-bigquery==2.34.4
+google-cloud-bigquery-storage==2.16.2
+google-cloud-core==2.3.2
+google-cloud-storage==2.4.0
+google-crc32c==1.5.0
+google-pasta==0.2.0
+google-resumable-media==2.4.0
+google-trans-new==1.1.9
+googleapis-common-protos==1.56.4
+graphviz==0.20.1
+greenlet==2.0.1
+grpcio==1.50.0
+grpcio-status==1.48.2
 gunicorn==20.1.0
 h11==0.14.0
+h5py==3.7.0
+html5lib==1.1
+htmlmin==0.1.12
+httpcore==0.16.2
+httpx==0.23.1
+humanize==4.4.0
 idna==3.4
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
-ipykernel==6.23.0
-ipython==8.12.2
+ImageHash==4.3.1
+imageio==2.22.2
+imbalanced-learn==0.9.1
+imblearn==0.0
+importlib-metadata==5.1.0
+importlib-resources==5.10.0
+inflection==0.5.1
+iniconfig==1.1.1
+install==1.3.5
+ipdb==0.13.9
+ipykernel==6.15.3
+ipympl==0.9.2
+ipython==8.5.0
 ipython-genutils==0.2.0
-isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jsonpointer==2.3
+ipywidgets==7.7.2
+isort==5.10.1
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.1
+json5==0.9.10
+jsonpath-ng==1.5.3
 jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-contrib-core==0.4.0
+jupyter-contrib-nbextensions==0.5.1
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.5.0
+jupyter-resource-usage==0.6.3
+jupyter-server==1.21.0
+jupyter-ui-poll==0.2.2
+jupyter_client==7.4.3
+jupyter_core==5.2.0
+jupyterlab==3.4.8
 jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+jupyterlab_server==2.16.1
+jupyterthemes==0.20.0
+jyquickhelper==0.4.220
+kaggle==1.5.12
+keras==2.10.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
-MarkupSafe==2.1.2
-matplotlib==3.7.1
+kneed==0.8.2
+kombu==5.2.4
+langcodes==3.3.0
+lazy-object-proxy==1.8.0
+lesscpy==0.15.1
+libclang==14.0.6
+linkify-it-py==2.0.0
+llvmlite==0.39.1
+locket==1.0.0
+lockfile==0.12.2
+lxml==4.9.1
+Mako==1.2.4
+Markdown==3.4.1
+markdown-it-py==2.1.0
+MarkupSafe==2.1.1
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
+matplotlib==3.5.3
 matplotlib-inline==0.1.6
-mistune==2.0.5
-nbclassic==1.0.0
-nbclient==0.7.4
-nbconvert==7.4.0
-nbformat==5.8.0
+mccabe==0.6.1
+mdit-py-plugins==0.3.1
+mdurl==0.1.2
+memoized-property==1.0.3
+Metaphone==0.6
+missingno==0.5.1
+mistune==0.8.4
+mlflow==2.2.2
+msal==1.21.0
+multidict==6.0.4
+multimethod==1.8
+munch==2.5.0
+murmurhash==1.0.9
+mypy-extensions==0.4.3
+mysql-connector-python==8.0.32
+nbclassic==0.4.7
+nbclient==0.7.0
+nbconvert==6.5.4
+nbformat==5.7.0
+nbresult==0.0.9
 nest-asyncio==1.5.6
-notebook==6.5.4
-notebook_shim==0.2.3
-numpy==1.24.3
-packaging==23.1
-pandas==2.0.1
+networkx==2.8.7
+nltk==3.7
+notebook==6.4.12
+notebook_shim==0.2.0
+numba==0.56.4
+numpy==1.23.4
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.4.4
+pandas-gbq==0.17.9
+pandas-profiling==3.3.0
 pandocfilters==1.5.0
 parso==0.8.3
+partd==1.3.0
+pathspec==0.9.0
+pathy==0.10.1
+patsy==0.5.3
+pendulum==2.1.2
 pexpect==4.8.0
+phik==0.12.2
 pickleshare==0.7.5
-Pillow==9.5.0
+Pillow==9.1.1
 pkgutil_resolve_name==1.3.10
-platformdirs==3.5.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-psutil==5.9.5
+platformdirs==2.5.2
+plotly==5.9.0
+pluggy==1.0.0
+ply==3.11
+pmdarima==2.0.1
+powerbiclient==2.0.1
+preshed==3.0.8
+prison==0.2.1
+prometheus-client==0.15.0
+promise==2.3
+prompt-toolkit==3.0.33
+proto-plus==1.22.1
+protobuf==3.19.6
+psutil==5.9.4
+psycopg2-binary==2.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
+pyarrow==8.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pycparser==2.21
-pydantic==1.10.7
-Pygments==2.15.1
+pydantic==1.9.2
+pydata-google-auth==1.4.0
+pydeck==0.8.0b4
+pydot==1.4.2
+pyensae==1.3.967
+pyflakes==2.4.0
+pygame==2.1.2
+Pygments==2.13.0
+PyJWT==2.6.0
+pylint==2.14.5
+Pympler==1.0.1
+PyMySQL==1.0.2
 pyparsing==3.0.9
-pyrsistent==0.19.3
+pyproj==3.4.1
+pyquickhelper==1.12.3806
+pyquicksetup==0.2.4
+pyrsistent==0.19.2
+pytest==7.1.3
+pytest-asyncio==0.19.0
+python-crfsuite==0.9.8
+python-daemon==2.3.2
 python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3
+python-dotenv==0.20.0
+python-nvd3==0.15.0
+python-slugify==7.0.0
+python-stdnum==1.18
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+pytzdata==2020.1
+pywaffle==1.1.0
+PyWavelets==1.4.1
 PyYAML==6.0
-pyzmq==25.0.2
-requests==2.30.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-scikit-learn==1.2.2
-scipy==1.10.1
-Send2Trash==1.8.2
+pyzmq==24.0.1
+qtconsole==5.4.1
+QtPy==2.3.0
+querystring-parser==1.2.4
+rapidfuzz==2.13.7
+regex==2021.11.10
+requests==2.28.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+rfc3986==1.5.0
+rich==12.6.0
+rsa==4.9
+scikit-image==0.19.3
+scikit-learn==1.2.1
+scipy==1.8.1
+seaborn==0.11.2
+semver==2.13.0
+Send2Trash==1.8.0
+setproctitle==1.3.2
+setuptools-scm==6.4.2
+shap==0.41.0
+shapely==2.0.1
 six==1.16.0
+slicer==0.0.7
+smart-open==6.2.0
+smmap==5.0.0
 sniffio==1.3.0
-soupsieve==2.4.1
-stack-data==0.6.2
-starlette==0.26.1
-terminado==0.17.1
+soupsieve==2.3.2.post1
+spacy==3.5.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+SQLAlchemy==2.0.6
+SQLAlchemy-JSONField==1.0.0
+SQLAlchemy-Utils==0.38.3
+sqlparse==0.4.3
+squarify==0.4.3
+srsly==2.4.6
+stack-data==0.5.1
+statsmodels==0.13.2
+stopit==1.1.2
+streamlit==1.11.1
+swagger-ui-bundle==0.0.9
+tabulate==0.9.0
+tangled-up-in-unicode==0.2.0
+tenacity==8.1.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-datasets==4.6.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.27.0
+tensorflow-metadata==1.10.0
+termcolor==2.1.1
+terminado==0.16.0
+text-unidecode==1.3
+thinc==8.1.9
 threadpoolctl==3.1.0
+tifffile==2022.10.10
 tinycss2==1.2.1
-tornado==6.3.1
-traitlets==5.9.0
-typing_extensions==4.5.0
-tzdata==2023.3
-uri-template==1.2.0
-urllib3==2.0.2
-uvicorn==0.22.0
-wcwidth==0.2.6
-webcolors==1.13
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.5
+toolz==0.12.0
+tornado==6.2
+TPOT==0.11.7
+tqdm==4.64.1
+traitlets==5.5.0
+typer==0.7.0
+typing_extensions==4.4.0
+tzdata==2022.5
+tzlocal==4.2
+uc-micro-py==1.0.1
+unicodecsv==0.14.1
+update-checker==0.18.0
+urllib3==1.26.13
+validators==0.20.0
+varname==0.8.3
+vine==5.0.0
+visions==0.7.5
+wasabi==1.1.1
+watchdog==2.1.9
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.5.1
-zipp==3.15.0
+websocket-client==1.4.1
+Werkzeug==2.2.2
+widgetsnbextension==3.6.1
+wordcloud==1.8.2.2
+wrapt==1.14.1
+WTForms==3.0.1
+xgboost==1.6.2
+XlsxWriter==3.0.3
+yapf==0.32.0
+yarl==1.8.2
+yellowbrick==1.5
+zipp==3.11.0
