--- a/requirements.txt
+++ b/requirements.txt
@@ -108,7 +108,7 @@ typing_extensions==4.5.0
 tzdata==2023.3
 uri-template==1.2.0
 urllib3==2.0.2
-uvicorn==
+uvicorn
 wcwidth==0.2.6
 wheel>=0.29
 webcolors==1.13
