--- a/requirements.txt
+++ b/requirements.txt
@@ -106,7 +106,6 @@ threadpoolctl==3.1.0
 tinycss2==1.2.1
 tornado==6.3.1
 traitlets==5.9.0
-typing==3.7.4.3
 typing_extensions==4.5.0
 tzdata==2023.3
 uri-template==1.2.0
@@ -116,3 +115,4 @@ webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
 zipp==3.15.0
+dotenv
