--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.95.2
-joblib==1.2.0
-pydantic==1.10.7
-PyMySQL==1.0.3
-python-dotenv==1.0.0
-setuptools==56.0.0
-uvicorn==0.22.0
+fastapi
+joblib
+pydantic
+PyMySQL
+python-dotenv
+setuptools
+uvicorn
