--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,137 @@
-pip>=9
-setuptools>=26
-wheel>=0.29
-pandas
-pytest
-coverage
-numpy
-scikit-learn
-joblib
-memoized-property
-mlflow
-gcsfs
-termcolor
-uvicorn
-pymysql
-urllib
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.11.1
+altair==4.2.2
+anyio==3.6.2
+async-timeout==4.0.2
+attrs==23.1.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.2
+blinker==1.6.2
+cachetools==5.3.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+contourpy==1.0.7
+coverage==7.2.5
+cycler==0.11.0
+databricks-cli==0.17.7
+decorator==5.1.1
+docker==6.1.2
+entrypoints==0.4
+exceptiongroup==1.1.1
+Faker==18.9.0
+fastapi==0.95.2
+favicon==0.7.0
+Flask==2.3.2
+fonttools==4.39.4
+frozenlist==1.3.3
+fsspec==2023.5.0
+gcsfs==2023.5.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-api-core==2.11.0
+google-auth==2.18.1
+google-auth-oauthlib==1.0.0
+google-cloud-core==2.3.2
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.0
+greenlet==2.0.2
+gunicorn==20.1.0
+h11==0.14.0
+htbuilder==0.6.1
+idna==3.4
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+kiwisolver==1.4.4
+lxml==4.9.2
+Mako==1.2.4
+Markdown==3.4.3
+markdown-it-py==2.2.0
+markdownlit==0.0.7
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mdurl==0.1.2
+memoized-property==1.0.3
+mlflow==2.3.2
+more-itertools==9.1.0
+multidict==6.0.4
+numpy==1.24.3
+oauthlib==3.2.2
+packaging==23.1
+pandas==2.0.1
+Pillow==9.5.0
+pkgutil_resolve_name==1.3.10
+plotly==5.14.1
+pluggy==1.0.0
+protobuf==3.20.3
+pyarrow==11.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pydantic==1.10.7
+pydeck==0.8.1b0
+Pygments==2.15.1
+PyJWT==2.7.0
+pymdown-extensions==10.0.1
+Pympler==1.0.1
+PyMySQL==1.0.3
+pyparsing==3.0.9
+pyrsistent==0.19.3
+pytest==7.3.1
+python-dateutil==2.8.2
+pytz==2023.3
+PyYAML==6.0
+querystring-parser==1.2.4
+requests==2.30.0
+requests-oauthlib==1.3.1
+rich==13.3.5
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.4.1
+SQLAlchemy==2.0.15
+sqlparse==0.4.4
+st-annotated-text==4.0.0
+starlette==0.27.0
+streamlit==1.22.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==0.0.4
+streamlit-embedcode==0.1.2
+streamlit-extras==0.2.7
+streamlit-faker==0.0.2
+streamlit-image-coordinates==0.1.3
+streamlit-keyup==0.2.0
+streamlit-option-menu==0.3.4
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==1.0.2
+tabulate==0.9.0
+tenacity==8.2.2
+termcolor==2.3.0
+threadpoolctl==3.1.0
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.3.2
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==1.26.15
+uvicorn==0.22.0
+validators==0.20.0
+watchdog==3.0.0
+websocket-client==1.5.2
+Werkzeug==2.3.4
+yarl==1.9.2
+zipp==3.15.0
